--- a/.github/workflows/manual-rate-limit.yml
+++ b/.github/workflows/manual-rate-limit.yml
@@ -1,12 +1,12 @@
 name: run-rate-limit-tests
 
 on:
-  workflow_dispatch:  # Esto hace que el workflow se ejecute solo manualmente
+  workflow_dispatch:  
 
 jobs:
-  run-rate-limit-tests:
+  run-tier1:
+    name: Run AGDE Tier 1
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -14,12 +14,51 @@ jobs:
       - name: Make script executable
         run: chmod +x Rate-Limit/run-agde-tier1.sh
 
-      - name: Run rate-limit test script
+      - name: Run Tier 1 script
         run: ./Rate-Limit/run-agde-tier1.sh
 
-      - name: Upload log as artifact
+      - name: Upload log for Tier 1
         uses: actions/upload-artifact@v4
         with:
-          name: request-log
-          path: Rate-Limit/request_log.txt  # Asegúrate de que el archivo esté en esa ruta
+          name: request-log-tier1
+          path: Rate-Limit/request_log.txt
+
+  run-tier2:
+    name: Run AGDE Tier 2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Make script executable
+        run: chmod +x Rate-Limit/run-agde-tier2.sh
+
+      - name: Run Tier 2 script
+        run: ./Rate-Limit/run-agde-tier2.sh
+
+      - name: Upload log for Tier 2
+        uses: actions/upload-artifact@v4
+        with:
+          name: request-log-tier2
+          path: Rate-Limit/request_log.txt
+
+  run-tier3:
+    name: Run AGDE Tier 3
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Make script executable
+        run: chmod +x Rate-Limit/run-agde-tier3.sh
+
+      - name: Run Tier 3 script
+        run: ./Rate-Limit/run-agde-tier3.sh
+
+      - name: Upload log for Tier 3
+        uses: actions/upload-artifact@v4
+        with:
+          name: request-log-tier3
+          path: Rate-Limit/request_log.txt
+
 
