--- a/.github/workflows/manual-rate-limit.yml
+++ b/.github/workflows/manual-rate-limit.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: request-log-tier1
-          path: Rate-Limit/request_log_tier1.rtf
+          path: Rate-Limit/request_log_tier1.txt
 
   run-tier2:
     name: Run AGDE Tier 2
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: request-log-tier2
-          path: Rate-Limit/request_log_tier2.rtf
+          path: Rate-Limit/request_log_tier2.txt
 
   run-tier3:
     name: Run AGDE Tier 3
@@ -59,4 +59,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: request-log-tier3
-          path: Rate-Limit/request_log_tier3.rtf
+          path: Rate-Limit/request_log_tier3.txt
