--- a/.github/workflows/manual-rate-limit.yml
+++ b/.github/workflows/manual-rate-limit.yml
@@ -1,62 +1,72 @@
-name: run-rate-limit-tests
+name: Run All Rate Limit Tiers
 
 on:
-  workflow_dispatch:  # Ejecutar solo manualmente
+  workflow_dispatch:  # Permite ejecutar manualmente desde la pestaña "Actions"
 
 jobs:
-  run-tier1:
+  tier1:
     name: Run AGDE Tier 1
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: API-s-/Rate-Limit
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Give execution permissions
-        run: chmod +x Rate-Limit/run-agde-tier1.sh
+      - name: Give permission to script
+        run: chmod +x run-agde-tier1.sh
 
       - name: Run Tier 1 script
-        run: ./Rate-Limit/run-agde-tier1.sh
+        run: ./run-agde-tier1.sh
 
       - name: Upload Tier 1 log
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: request-log-tier1
-          path: Rate-Limit/request_log_tier1.txt
+          name: request_log_tier1
+          path: API-s-/Rate-Limit/request_log_tier1.txt
 
-  run-tier2:
+  tier2:
     name: Run AGDE Tier 2
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: API-s-/Rate-Limit
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Give execution permissions
-        run: chmod +x Rate-Limit/run-agde-tier2.sh
+      - name: Give permission to script
+        run: chmod +x run-agde-tier2.sh
 
       - name: Run Tier 2 script
-        run: ./Rate-Limit/run-agde-tier2.sh
+        run: ./run-agde-tier2.sh
 
       - name: Upload Tier 2 log
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: request-log-tier2
-          path: Rate-Limit/request_log_tier2.txt
+          name: request_log_tier2
+          path: API-s-/Rate-Limit/request_log_tier2.txt
 
-  run-tier3:
+  tier3:
     name: Run AGDE Tier 3
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: API-s-/Rate-Limit
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Give execution permissions
-        run: chmod +x Rate-Limit/run-agde-tier3.sh
+      - name: Give permission to script
+        run: chmod +x run-agde-tier3.sh
 
       - name: Run Tier 3 script
-        run: ./Rate-Limit/run-agde-tier3.sh
+        run: ./run-agde-tier3.sh
 
       - name: Upload Tier 3 log
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: request-log-tier3
-          path: Rate-Limit/request_log_tier3.txt
+          name: request_log_tier3
+          path: API-s-/Rate-Limit/request_log_tier3.txt
+t
