--- a/.github/workflows/manual-rate-limit.yml
+++ b/.github/workflows/manual-rate-limit.yml
@@ -18,7 +18,7 @@ jobs:
         run: ./Rate-Limit/run-agde-tier1.sh
 
       - name: Upload Tier 1 log
-        uses: actions/upload-artifact@sha256:942562b9c7d4b1f2557f1da21f4d3eb4eb4fd01f2ad78b2a6e187d1b193e0a0f  # SHA de una versión confiable
+        uses: actions/upload-artifact@v2  # Usando una versión anterior y estable
         with:
           name: request-log-tier1
           path: Rate-Limit/request_log_tier1.txt
@@ -37,7 +37,7 @@ jobs:
         run: ./Rate-Limit/run-agde-tier2.sh
 
       - name: Upload Tier 2 log
-        uses: actions/upload-artifact@sha256:942562b9c7d4b1f2557f1da21f4d3eb4eb4fd01f2ad78b2a6e187d1b193e0a0f  # SHA de una versión confiable
+        uses: actions/upload-artifact@v2  # Usando una versión anterior y estable
         with:
           name: request-log-tier2
           path: Rate-Limit/request_log_tier2.txt
@@ -56,7 +56,7 @@ jobs:
         run: ./Rate-Limit/run-agde-tier3.sh
 
       - name: Upload Tier 3 log
-        uses: actions/upload-artifact@sha256:942562b9c7d4b1f2557f1da21f4d3eb4eb4fd01f2ad78b2a6e187d1b193e0a0f  # SHA de una versión confiable
+        uses: actions/upload-artifact@v2  # Usando una versión anterior y estable
         with:
           name: request-log-tier3
           path: Rate-Limit/request_log_tier3.txt
