--- a/.github/workflows/goodimg-parallelreq.yml
+++ b/.github/workflows/goodimg-parallelreq.yml
@@ -34,6 +34,8 @@ jobs:
     name: Run GOODIMG AOD Tier 3
     runs-on: ubuntu-latest
     needs: run-ADE-tier3
+    continue-on-error: true # This allows the workflow to continue even if job1 fails
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
